@@ -12,22 +12,22 @@ module CIF
     void do_foo ();
   };
 
-  interface inherited_foo : foo
+  interface derived_foo : foo
   {
-    void do_inherited_foo ();
+    void do_derived_foo ();
   };
 
   component CIF_Provider
   {
     provides foo           provide_cif_foo;
-    provides inherited_foo provide_cif_inherited_foo;
+    provides derived_foo provide_cif_derived_foo;
   };
 
   component CIF_User
   {
     uses foo           use_cif_foo;
     uses multiple foo  use_multiple_foo;
-    uses inherited_foo use_cif_inherited_foo;
+    uses derived_foo use_cif_derived_foo;
   };
 
   home CIF_UserHome manages CIF_User
